--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <p class='feynman__subtitle'>Выучить и не забыть</p>
     <a class='feynman__link'
       href='https://ru.wikipedia.org/wiki/%D0%94%D0%B8%D0%B0%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D1%8B_%D0%A4%D0%B5%D0%B9%D0%BD%D0%BC%D0%B0%D0%BD%D0%B0#:~:text=%D0%9C%D0%B5%D1%82%D0%BE%D0%B4%20%D0%BF%D1%80%D0%B5%D0%B4%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%20%D0%A0%D0%B8%D1%87%D0%B0%D1%80%D0%B4%D0%BE%D0%BC%20%D0%A4%D0%B5%D0%B9%D0%BD%D0%BC%D0%B0%D0%BD%D0%BE%D0%BC%20%D0%B2,%D0%BA%D0%BE%D0%B3%D0%B4%D0%B0%20%D0%B8%D0%B7%20%D0%BF%D0%BE%D0%BB%D0%BD%D0%BE%D0%B3%D0%BE%20(%D1%8D%D1%84%D1%84%D0%B5%D0%BA%D1%82%D0%B8%D0%B2%D0%BD%D0%BE%D0%B3%D0%BE)%20%D0%BB%D0%B0%D0%B3%D1%80%D0%B0%D0%BD%D0%B6%D0%B8%D0%B0%D0%BD%D0%B0'>Подробнее<span>&rarr;</span></a>
-    <img class='feyman__image' src='./images/feinman.png' alt='Портрет Ричарда Феймана'>
+    <img class='feynman__image' src='./images/feinman.png' alt='Портрет Ричарда Феймана'>
   </section>
   <!-- 7th block digits -->
   <section class='digits'>
